add subjects to bootstrap