@@ -16,6 +16,8 @@ import io.swagger.annotations.*;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -28,7 +30,10 @@ import java.time.LocalDate;
 import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.List;
+import java.util.function.Function;
 import java.util.stream.Collectors;
+
+import static java.util.stream.Collectors.toMap;
 
 @Transactional
 @RestController(value = "SubjectAPI")
@@ -163,17 +168,16 @@ public class SubjectController {
     }
 
     @GetMapping("/all-subjects")
-    public ResponseEntity<List<SubjectDTO>> getAllSubjects(
+    public ResponseEntity<Page<SubjectDTO>> getAllSubjects(
             @RequestParam(name="page") Integer page,
-            @RequestParam(name="elems", defaultValue = "10") Integer elems
+            @RequestParam(name="elems") Integer elems
     ) {
         Pageable pageable = PageRequest.of(page, elems);
-        return this.makeResponseEntityWithGoodStatus(
-                this.subjectService.getPageSubject(pageable).toList()
-        );
+        List<SubjectDTO> subjectPage =  this.subjectService.getPageSubject(pageable).stream()
+                                                                                   .map(SubjectDTO::new)
+                                                                                   .collect(Collectors.toList());
+        return new ResponseEntity<Page<SubjectDTO>>(new PageImpl<>(subjectPage),HttpStatus.OK);
     }
-
-
 
     @PutMapping(value = "/edit-general-info/{id}", consumes = "application/json")
     public ResponseEntity<SubjectDTO> editGeneralInfoSubject(@PathVariable Integer id,
